# projeto-orientado-2-sintetizador-de-udio-filipe19

./: CMakeLists.txt  README.md  sintetizador_audio.c
